objects/ssot__LearnerProfile__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__AcademicLevel__c</fullName>
        <label>Academic Level</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AcademicStanding__c</fullName>
        <label>Academic Standing</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AcademicTermEnrollmentId__c</fullName>
        <label>Academic Term Enrollment</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AdmitTerm__c</fullName>
        <label>Admit Term</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__College__c</fullName>
        <label>College</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Concentration__c</fullName>
        <label>Concentration</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ContactId__c</fullName>
        <label>Contact</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ContactProfileId__c</fullName>
        <label>Contact Profile</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CumulativeGpaNumber__c</fullName>
        <label>Cumulative GPA</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Email__c</fullName>
        <label>Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EnrollmentReason__c</fullName>
        <label>Enrollment Reason</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EnrollmentStatus__c</fullName>
        <label>Enrollment Status</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ExpectedGraduationDate__c</fullName>
        <label>Expected Graduation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__Gender__c</fullName>
        <label>Gender</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__HasParentalFerpa__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Parental FERPA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__HasThirdPartyFerpa__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Third-Party FERPA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Learner Profile Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InstructionMode__c</fullName>
        <label>Instruction Mode</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsAthlete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Athlete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__IsCampusResident__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Campus Resident</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__IsDeceased__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deceased</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__IsEnrolledInCareerServices__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enrolled In Career Services</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__IsEnrolledInDualDegree__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dual Degree</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__IsFirstGenerationStudent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>First Generation Student</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__IsInternationalStudent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>International Student</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__IsPellGrantEligible__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pell Grant Eligible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__IsTransferStudent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Transfer Student</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__MajorDeclarationTerm__c</fullName>
        <label>Major Declaration Term</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Major__c</fullName>
        <label>Major</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__MatriculationTerm__c</fullName>
        <label>Matriculation Term</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Minor__c</fullName>
        <label>Minor</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Learner Profile Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PrimaryAdvisorId__c</fullName>
        <label>Primary Advisor</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PrimaryAdvisorName__c</fullName>
        <label>Primary Advisor Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Pronouns__c</fullName>
        <label>Pronouns</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SecondConcentration__c</fullName>
        <label>Second Concentration</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SecondMajor__c</fullName>
        <label>Second Major</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SecondMinor__c</fullName>
        <label>Second Minor</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SecondaryAdvisorId__c</fullName>
        <label>Secondary Advisor</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SecondaryAdvisorName__c</fullName>
        <label>Secondary Advisor Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__StudentIdNumber__c</fullName>
        <label>Student Identification</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__StudyYearClassification__c</fullName>
        <label>Study Year Classification</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__TotalUnitsCompleted__c</fullName>
        <label>Total Units Completed</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1731040500261_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LearnerProfile_ContactId_map_Individ_rel</label>
        <referenceTo>ssot__Individual__dlm</referenceTo>
        <relationshipLabel>LearnerProfile_ContactId_map_Individ_rel</relationshipLabel>
        <relationshipName>rel_1731040500261_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1731041076697_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LearnerProfile_PrimaryAdvisorId_map__rel</label>
        <referenceTo>ssot__User__dlm</referenceTo>
        <relationshipLabel>LearnerProfile_PrimaryAdvisorId_map__rel</relationshipLabel>
        <relationshipName>rel_1731041076697_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1731041080230_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LearnerProfile_SecondaryAdvisorId_ma_rel</label>
        <referenceTo>ssot__User__dlm</referenceTo>
        <relationshipLabel>LearnerProfile_SecondaryAdvisorId_ma_rel</relationshipLabel>
        <relationshipName>rel_1731041080230_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>